include/altdss/capi/alt.h

    // Relevant functions from the CktElement and PDElements API, working directly on the elements
    //TODO: copy comments and adapt

    ALTDSS_CAPI_DLL void Alt_CE_Get_BusNames(char*** resultPtr, int32_t *resultDims, void* elem, int32_t removeNodes);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumConductors(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumPhases(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumTerminals(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Set_BusNames(void* elem, const char** valuePtr, int32_t valueCount);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Currents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Voltages(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Losses(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_PhaseLosses(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Powers(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_SeqCurrents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_SeqPowers(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_SeqVoltages(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Close(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL void Alt_CE_Open(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_IsOpen(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Residuals(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_Handle(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Controllers(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasVoltControl(void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasSwitchControl(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_ComplexSeqVoltages(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_ComplexSeqCurrents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_NodeOrder(int32_t** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasOCPDevice(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumControllers(void* elem);
    ALTDSS_CAPI_DLL void* Alt_CE_Get_OCPDevice(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_OCPDeviceIndex(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_OCPDeviceType(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_CurrentsMagAng(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_VoltagesMagAng(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_TotalPowers(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_IsIsolated(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_NodeRef(int32_t** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL const char* Alt_CE_Get_DisplayName(void* pce);
    ALTDSS_CAPI_DLL const char* Alt_CE_Get_GUID(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Set_DisplayName(void* elem, const char* value);
    ALTDSS_CAPI_DLL double Alt_CE_MaxCurrent(void* elem, int32_t terminalIdx);
    ALTDSS_CAPI_DLL void Alt_PCE_Get_VariableNames(char*** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_PCE_Get_VariableValues(double** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_PCE_Set_VariableValue(void* pce, int32_t varIdx, double value);
    ALTDSS_CAPI_DLL double Alt_PCE_Get_VariableValue(void* pce, int32_t varIdx);
    ALTDSS_CAPI_DLL const char* Alt_PCE_Get_VariableName(void* pce, int32_t varIdx);
    ALTDSS_CAPI_DLL void* Alt_PCE_Get_EnergyMeter(void* elem);
    ALTDSS_CAPI_DLL const char* Alt_PCE_Get_EnergyMeterName(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_RegisterNames(char*** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_CE_Get_RegisterValues(double** resultPtr, int32_t *resultDims, void* pce);
    
    ALTDSS_CAPI_DLL altdss_bool_t Alt_PDE_Get_IsShunt(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_AccumulatedL(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_Lambda(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_NumCustomers(void* pde);
    ALTDSS_CAPI_DLL void* Alt_PDE_Get_ParentPDElement(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_TotalCustomers(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_FromTerminal(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_TotalMiles(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_SectionID(void* pde);
    ALTDSS_CAPI_DLL void* Alt_PDE_Get_EnergyMeter(void* elem);
    ALTDSS_CAPI_DLL const char* Alt_PDE_Get_EnergyMeterName(void* elem);
    ALTDSS_CAPI_DLL void Alt_LoadShape_Set_Points(void *objPtr, int32_t Npts, void *HoursPtr, void *PMultPtr, void *QMultPtr, altdss_bool_t ExternalMemory, altdss_bool_t IsFloat32, int32_t Stride);
    ALTDSS_CAPI_DLL void Alt_LoadShape_UseFloat64(void *objPtr);
    ALTDSS_CAPI_DLL void Alt_LoadShape_UseFloat32(void *objPtr);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_ByteStream(int8_t** resultPtr, int32_t* resultDims, void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_SampleCount(void* pmon);
    ALTDSS_CAPI_DLL const char* Alt_Monitor_Get_FileName(void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_NumChannels(void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_RecordSize(void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Show(void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_Channel(double** resultPtr, int32_t *resultDims, void* pmon, int32_t index);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_dblFreq(double** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_dblHour(double** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_Header(char*** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_WdgVoltages(double** resultPtr, int32_t *resultDims, void* elem, int32_t winding);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_WdgCurrents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_LossesByType(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_TotalCustomers(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumEndElements(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumSections(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_NumBranchesInZone(void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_CalcCurrent(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Set_CalcCurrent(void* elem, const double* ValuePtr, int32_t valueCount);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_AllocFactors(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Set_AllocFactors(void* elem, const double* ValuePtr, int32_t valueCount);
    ALTDSS_CAPI_DLL void Alt_Meter_DoReliabilityCalc(void* elem, altdss_bool_t assumeRestoration);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_ZonePCEs(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_EndElements(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_BranchesInZone(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_SequenceList(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Meter_Get_Loads(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL double Alt_MeterSection_AvgRepairTime(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL double Alt_MeterSection_FaultRateXRepairHours(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_NumBranches(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_NumCustomers(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_OCPDeviceType(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL double Alt_MeterSection_SumBranchFaultRates(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_SequenceIndex(void* elem, int32_t idx);
    ALTDSS_CAPI_DLL int32_t Alt_MeterSection_TotalCustomers(void* elem, int32_t idx);