src/CAPI/CAPI_Alt.pas

unit CAPI_Alt;

interface

uses
    CAPI_Utils,
    DSSObject,
    CktElement,
    PCElement,
    PDElement,
    LoadShape,
    Monitor,
    Transformer,
    EnergyMeter,
    CAPI_Types;

procedure Alt_CE_Get_BusNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_NumConductors(elem: TDSSCktElement): Integer; CDECL;
function Alt_CE_Get_NumPhases(elem: TDSSCktElement): Integer; CDECL;
function Alt_CE_Get_NumTerminals(elem: TDSSCktElement): Integer; CDECL;
procedure Alt_CE_Set_BusNames(elem: TDSSCktElement; ValuePtr: PPAnsiChar; ValueCount: TAPISize); CDECL;
procedure Alt_CE_Get_Currents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_Voltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_Losses(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_PhaseLosses(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_Powers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_SeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_SeqPowers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Close(elem: TDSSCktElement; Term, Phs: Integer); CDECL;
procedure Alt_CE_Open(elem: TDSSCktElement; Term, Phs: Integer); CDECL;
function Alt_CE_IsOpen(elem: TDSSCktElement; Term, Phs: Integer): TAPIBoolean; CDECL;
procedure Alt_CE_Get_Residuals(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_Yprim(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_Handle(elem: TDSSCktElement): Integer; CDECL;
// function Alt_CE_Get_ControllerName(elem: TDSSCktElement; idx: Integer): PAnsiChar; CDECL;
// function Alt_CE_Get_Controller(elem: TDSSCktElement; idx: Integer): TDSSObject; CDECL;
procedure Alt_CE_Get_Controllers(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_HasVoltControl(elem: TDSSCktElement): TAPIBoolean; CDECL;
function Alt_CE_Get_HasSwitchControl(elem: TDSSCktElement): TAPIBoolean; CDECL;
procedure Alt_CE_Get_ComplexSeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_ComplexSeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_NodeOrder(var ResultPtr: PInteger; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_HasOCPDevice(elem: TDSSCktElement): TAPIBoolean; CDECL;
function Alt_CE_Get_NumControllers(elem: TDSSCktElement): Integer; CDECL;
function Alt_CE_Get_OCPDevice(elem: TDSSCktElement): TDSSCktElement; CDECL;
function Alt_CE_Get_OCPDeviceIndex(elem: TDSSCktElement): Integer; CDECL;
function Alt_CE_Get_OCPDeviceType(elem: TDSSCktElement): Integer; CDECL;
procedure Alt_CE_Get_CurrentsMagAng(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_VoltagesMagAng(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_TotalPowers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_IsIsolated(elem: TDSSCktElement): TAPIBoolean; CDECL;
procedure Alt_CE_Get_NodeRef(var ResultPtr: PInteger; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
function Alt_CE_Get_DisplayName(elem: TDSSCktElement): PAnsiChar; CDECL;
function Alt_CE_Get_GUID(elem: TDSSCktElement): PAnsiChar; CDECL;
procedure Alt_CE_Set_DisplayName(elem: TDSSCktElement; const Value: PAnsiChar); CDECL;
function Alt_CE_MaxCurrent(obj: TDSSCktElement; terminalIdx: Integer): Double; CDECL;
procedure Alt_CE_Get_RegisterNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
procedure Alt_CE_Get_RegisterValues(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
//PCElements
procedure Alt_PCE_Get_VariableNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TPCElement); CDECL;
procedure Alt_PCE_Get_VariableValues(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TPCElement); CDECL;
procedure Alt_PCE_Set_VariableValue(elem: TPCElement; varIdx: Integer; Value: Double); CDECL;
function Alt_PCE_Get_VariableValue(elem: TPCElement; varIdx: Integer): Double; CDECL;
function Alt_PCE_Get_VariableName(elem: TPCElement; varIdx: Integer): PAnsiChar; CDECL;
function Alt_PCE_Get_EnergyMeter(elem: TPCElement): TDSSObject; CDECL;
function Alt_PCE_Get_EnergyMeterName(elem: TPCElement): PAnsiChar; CDECL;

//PDElements
function Alt_PDE_Get_EnergyMeter(elem: TPDElement): TDSSObject; CDECL;
function Alt_PDE_Get_EnergyMeterName(elem: TPDElement): PAnsiChar; CDECL;
function Alt_PDE_Get_IsShunt(elem: TPDElement): TAPIBoolean; CDECL;
function Alt_PDE_Get_AccumulatedL(elem: TPDElement): Double; CDECL;
function Alt_PDE_Get_Lambda(elem: TPDElement): Double; CDECL;
function Alt_PDE_Get_NumCustomers(elem: TPDElement): Integer; CDECL;
function Alt_PDE_Get_ParentPDElement(elem: TPDElement): TPDElement; CDECL;
function Alt_PDE_Get_TotalCustomers(elem: TPDElement): Integer; CDECL;
function Alt_PDE_Get_FromTerminal(elem: TPDElement): Integer; CDECL;
function Alt_PDE_Get_TotalMiles(elem: TPDElement): Double; CDECL;
function Alt_PDE_Get_SectionID(elem: TPDElement): Integer; CDECL;
//LoadShape
procedure Alt_LoadShape_Set_Points(elem: TLoadshapeObj; Npts: TAPISize; HoursPtr: Pointer; PMultPtr: Pointer; QMultPtr: Pointer; ExternalMemory: TAPIBoolean; IsFloat32: TAPIBoolean; Stride: Integer); CDECL;
procedure Alt_LoadShape_UseFloat64(elem: TLoadshapeObj); CDECL;
procedure Alt_LoadShape_UseFloat32(elem: TLoadshapeObj); CDECL;
//Monitor
procedure Alt_Monitor_Get_ByteStream(var ResultPtr: PByte; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
function Alt_Monitor_Get_SampleCount(pmon: TMonitorObj): Integer; CDECL;
function Alt_Monitor_Get_FileName(pmon: TMonitorObj): PAnsiChar; CDECL;
function Alt_Monitor_Get_NumChannels(pmon: TMonitorObj): Integer; CDECL;
function Alt_Monitor_Get_RecordSize(pmon: TMonitorObj): Integer; CDECL;
procedure Alt_Monitor_Show(pmon: TMonitorObj); CDECL;
procedure Alt_Monitor_Get_Channel(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj; Index: Integer); CDECL;
procedure Alt_Monitor_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
procedure Alt_Monitor_Get_dblHour(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
procedure Alt_Monitor_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
//Transformer
procedure Alt_Transformer_Get_WdgVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
procedure Alt_Transformer_Get_WdgCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
procedure Alt_Transformer_Get_LossesByType(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
//EnergyMeter, general
function Alt_Meter_Get_TotalCustomers(elem: TEnergyMeterObj): Integer; CDECL;
procedure Alt_Meter_Get_CalcCurrent(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Set_CalcCurrent(elem: TEnergyMeterObj; ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
procedure Alt_Meter_Get_AllocFactors(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Set_AllocFactors(elem: TEnergyMeterObj; ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
procedure Alt_Meter_DoReliabilityCalc(elem: TEnergyMeterObj; AssumeRestoration: TAPIBoolean); CDECL;
function Alt_Meter_Get_NumEndElements(elem: TEnergyMeterObj): Integer; CDECL;
function Alt_Meter_Get_NumSections(elem: TEnergyMeterObj): Integer; CDECL;
function Alt_Meter_Get_NumBranchesInZone(elem: TEnergyMeterObj): Integer; CDECL;
procedure Alt_Meter_Get_ZonePCEs(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Get_EndElements(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Get_BranchesInZone(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Get_SequenceList(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
procedure Alt_Meter_Get_Loads(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TEnergyMeterObj); CDECL;
//MeterSection
function Alt_MeterSection_AvgRepairTime(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
function Alt_MeterSection_FaultRateXRepairHours(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
function Alt_MeterSection_NumBranches(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
function Alt_MeterSection_NumCustomers(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
function Alt_MeterSection_OCPDeviceType(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
function Alt_MeterSection_SumBranchFaultRates(elem: TEnergyMeterObj; idx: Integer): Double; CDECL;
function Alt_MeterSection_SequenceIndex(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;
function Alt_MeterSection_TotalCustomers(elem: TEnergyMeterObj; idx: Integer): Integer; CDECL;


implementation

uses
    CAPI_Constants,
    DSSObjectHelper,
    DSSClassDefs,
    DSSGlobals,
    UComplex, DSSUcomplex,
    Sysutils,
    MathUtil,
    Utilities,
    DSSClass,
    DSSHelper,
    Bus,
    Solution,
    PDClass,
    DSSPointerList,
    XYCurve,
    ArrayDef,
    Math,
    Classes,
    CktElementClass,
    CktTree;
    
procedure _CalcSeqCurrents(elem: TDSSCktElement; i012: pComplexArray);
// Assumes V012 is properly allocated before call.
var
    i, j, k, iV: Integer;
    IPh, I012a: Complex3;
    cBuffer: pComplexArray;
    DSS: TDSSContext;
begin
    DSS := elem.DSS;
    if elem.NPhases <> 3 then
    begin
        // Handle non-3 phase elements
        if (elem.Nphases = 1) and DSS.ActiveCircuit.PositiveSequence then
        begin
            cBuffer := Allocmem(sizeof(Complex) * elem.NConds * elem.NTerms);
            elem.GetCurrents(cBuffer);

            for i := 1 to 3 * elem.NTerms do
                i012[i] := 0;   // Initialize Result
            iV := 2;  // pos seq is 2nd element in array
            // Populate only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                i012[iV] := cBuffer[1 + k];
                Inc(iV, 3);  // inc to pos seq of next terminal
            end;
            Reallocmem(cBuffer, 0);
        end
        // if neither 3-phase or pos seq model, just put in -1.0 for each element
        else
            for i := 1 to 3 * elem.NTerms do
                i012[i] := -1;  // Signify n/A

        Exit;
    end;
    
    // for 3-phase elements
    iV := 1;
    cBuffer := Allocmem(sizeof(Complex) * elem.NConds * elem.NTerms);
    elem.GetCurrents(cBuffer);
    for j := 1 to elem.NTerms do
    begin
        k := (j - 1) * elem.NConds;
        for i := 1 to 3 do
            Iph[i] := cBuffer[k + i];
        Phase2SymComp(@Iph, @I012a);

        for i := 1 to 3 do
        begin     // Stuff it in the result array
            i012[iV] := i012a[i];
            Inc(iV);
        end;
    end;
    Reallocmem(cBuffer, 0);
end;

//------------------------------------------------------------------------------
procedure CalcSeqVoltages(elem: TDSSCktElement; V012: pComplexArray);
// Assumes V012 is properly allocated before call.
var
    i, j, k, iV: Integer;
    VPh, V012a: Complex3;
    NodeV: pNodeVArray;
    DSS: TDSSContext;
begin
    DSS := elem.DSS;
    NodeV := elem.DSS.ActiveCircuit.Solution.NodeV;
